--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.24.0",
     "@razorlabs/m1-wallet-sdk": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
